assets/css/main.scss
:root {
  --bg-color: #ffffff;
  --bg-accent-color: #001021;
  --bg-accent-color: #ffefde;

  --text-color: #000000;
  --text-accent-color: #eeeeee;
  --text-accent-color: #101010;

  --highlight-color: #d6d8b3;
}

@media (prefers-color-scheme: dark) {
  :root {
    --bg-color: #1b2021;
    --bg-accent-color: #001021;

    --text-color: #eeeeee;
    --text-accent-color: #eeeeee;

    --highlight-color: #29274c;
  }
}

html,
body {
  background: var(--bg-color);
  color: var(--text-color);

  height: 100%;

  font-family: monospace;
  font-size: 16px;
  line-height: 1.4;
  margin: 0;
  min-height: 100%;
  overflow-wrap: break-word;
}

.post-meta {
  text-align: right;
}

h2,
h3,
h4,
h5,
h6 {
  margin-top: 3rem;
  padding-left: 6px;
}

hr {
  margin: 2rem 0;
}

p {
  margin: 1rem 0;
}

li {
  margin: 0.4rem 0;
}

*:target {
  background: var(--highlight-color);
  border-radius: 3px;
}

.w {
  max-width: 640px;
  margin: 0 auto;
  padding: 4rem 2rem;
}

.toc {
  border: thin solid var(--text-color);
  padding: 1rem;
}

hr {
  text-align: center;
  border: 0;

  &:before {
    content: '/////'
  }

  &:after {
    content: attr(data-content) '/////'
  }
}

table {
  width: 100%;
}

table,
th,
td {
  border: thin solid var(--text-color);
  border-collapse: collapse;
  padding: 0.4rem;
}

.highlight {
  overflow-x: auto;
  border-radius: 6px;
}

pre {
  overflow-x: auto;
  border-radius: 6px;
}

/* for inline code */
code {
  display: inline-block;
  font-size: 90%;
  background-color: var(--bg-accent-color);
  color: var(--text-accent-color);

  padding: 0 4px;
  margin: 0 -4px;
  border-radius: 6px;
}

/* for code blocks */
.highlight pre {
  background-color: var(--bg-accent-color) !important;
}

pre code {
  display: block;
}

/* for code blocks without line numbers */
:not(td) pre {
  margin: 0;
}

:not(td) pre code {
  padding: 16px;
}

blockquote {
  font-style: italic;
  border: thin solid var(--text-color);
  padding: 1rem;

  p {
    margin: 0;
  }
}

img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

figcaption {
  text-align: center;
  opacity: 0.5;
}

